97% complete with gif finder

--- a/Assignments/Gif Finder/gif_finder_lab/pubspec.yaml
+++ b/Assignments/Gif Finder/gif_finder_lab/pubspec.yaml
@@ -20,3 +20,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+  - family: dogico
+    fonts:
+      - asset: assets\fonts\VT323-Regular.ttf
