--- a/Projects/web_service_application/pubspec.yaml
+++ b/Projects/web_service_application/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.2.0
+  shared_preferences: ^2.2.2
   url_launcher: ^6.2.5
 
 dev_dependencies:
@@ -19,3 +20,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/images/
