--- a/Projects/multi_man/pubspec.yaml
+++ b/Projects/multi_man/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flame: ^1.15.0
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.11
 
 dev_dependencies:
   flutter_test:
